# Vitis-AI-Tutorials

./: README.md  index.rst
Design_Tutorials/01-caffe_cats_vs_dogs/: README.md
Design_Tutorials/01-caffe_cats_vs_dogs/files/: run_all_alexnet.sh  set_the_CATSvsDOGS_prj.py
Design_Tutorials/02-MNIST_classification_tf/: README.md
Design_Tutorials/02-MNIST_classification_tf/files/: 0_setenv.sh  6_compile_vck190.sh  7_make_target_vck190.sh  run_all.sh  setup.sh
Design_Tutorials/03-using_densenetx/: README.md
Design_Tutorials/03-using_densenetx/files/: 0_setenv.sh  3_eval_frozen.sh  6_compile.sh  7_make_target.sh  alveo_hbm_setup.sh  eval_graph.py  run_all.sh  start_cpu_docker.sh
Design_Tutorials/04-Keras_GoogleNet_ResNet/: README.md
Design_Tutorials/04-Keras_GoogleNet_ResNet/files/: run_all.sh  run_cifar10.sh  run_fmnist.sh
Design_Tutorials/05-Keras_FCN8_UNET_segmentation/: README.md
Design_Tutorials/05-Keras_FCN8_UNET_segmentation/files/: run_all.sh  run_fcn8.sh  run_fcn8ups.sh  run_unet.sh
Design_Tutorials/06-densenetx_DPUv3/: README.md
Design_Tutorials/06-densenetx_DPUv3/files/: 0_setenv.sh
Design_Tutorials/07-ml-edge-YOLOv3/: README.md
Design_Tutorials/07-ml-edge-YOLOv3/files/: list.txt  yolov3_voc.ipynb
Design_Tutorials/07-yolov4-tutorial/: readme.md
Design_Tutorials/07-yolov4-tutorial/dpu_yolov4_voc/: dpu_yolov4_voc.prototxt
Design_Tutorials/07-yolov4-tutorial/scripts/: get_voc_dataset.sh  setup_environment.sh  test_caffe_fp.sh
Design_Tutorials/07-yolov4-tutorial/voc/: 2007_test.txt
Design_Tutorials/08-tf2_flow/: README.md
Design_Tutorials/08-tf2_flow/files/: compile.sh  docker_run.sh  (+5 more)
Design_Tutorials/09-mnist_pyt/: README.md
Design_Tutorials/10-RF_modulation_recognition/: README.md
Design_Tutorials/11-Medical-AI-acceleration/: README.md
Design_Tutorials/11-tf2_var_autoenc/: .gitignore  README.md
Design_Tutorials/12-Alveo-U250-TF2-Classification/: README.md
Design_Tutorials/13-vdpu-pre-post-pl-acc/: README.md
Design_Tutorials/14-caffe-ssd-pascal/: README.md
Design_Tutorials/15-caffe-segmentation-cityscapes/: README.md
Design_Tutorials/16-profiler_introduction/: README.md
Design_Tutorials/17-PyTorch-CityScapes-Pruning/: .gitignore  README.md
Design_Tutorials/18-mpsocdpu-pre-post-pl-acc/: README.md
Design_Tutorials/19-tf1_keras_optimizer/: .gitignore  README.md
Design_Tutorials/tf2_var_autoenc/: README.md
Feature_Tutorials/01-freezing_a_keras_model/: README.md
Feature_Tutorials/02-profiling-example/: README.md
Feature_Tutorials/04-tensorflow-ai-optimizer/: README.md
Feature_Tutorials/Vitis-AI-based-Deployment-Flow-on-VCK190/: README.md
Feature_Tutorials/pytorch-subgraphs/: README.md
Feature_Tutorials/tf2_quant_fine_tune/: .gitignore  README.md
Introduction/: Machine_Learning_Introduction.rst  README.md
Introduction/01-Workflows/: README.md
Introduction/02-System_Setup/: README.md
Introduction/03-Basic/: ML_Introduction_Basic.rst
Tutorials/02-MNIST_classification_tf/: README.md
Tutorials/03-CIFAR10-TF/: README.md
Tutorials/04-Keras_GoogleNet_ResNet/: README.md
Tutorials/05-ML-caffe-segmentation/: README.md
Tutorials/07-ml-edge-yolo3/: README.md
Tutorials/08-ultra96v2/: README.md
Tutorials/09-ml-ssd-pascal-caffe/: README.md
Tutorials/Kaggle_ImageNet/: README.md  gen_imglbl.py
Tutorials/Keras_FCN8_UNET_segmentation/: README.md
Tutorials/Keras_GoogleNet_ResNet/: README.md
Tutorials/PyTorch-ResNet18/: README.md
Tutorials/RESNET18/: README.md
Tutorials/RFModulation_Recognition/: README.md
Tutorials/TF2-Vitis-AI-Optimizer/: README.md
Tutorials/VCK190_CUSTOM_LAMBDA_OP/: README.md
Tutorials/Vitis-AI-Vivado-TRD/: README.md
Tutorials/Vitis-AI-on-VCK5000-ES-Board/: README.md
Tutorials/caffe_cats_vs_dogs/: README.md
Tutorials/kv260_lidar_cam_fusion/: .gitignore  README.md  build.sh  install.sh  run.sh
Tutorials/kv260_lidar_cam_fusion/src/cam_detection/: CMakeLists.txt  README.md  package.xml
Tutorials/kv260_lidar_cam_fusion/src/cam_detection/launch/: cam_detection.launch
Tutorials/kv260_lidar_cam_fusion/src/cam_detection/rviz/: cam_detection.rviz
Tutorials/kv260_lidar_cam_fusion/src/cam_detection/src/: cam_detection.cpp  cam_detection.hpp  cam_detection_node.cpp
Tutorials/kv260_lidar_cam_fusion/src/display_fps/: CMakeLists.txt  README.md  package.xml
Tutorials/kv260_lidar_cam_fusion/src/display_fps/launch/: display_fps.launch
Tutorials/kv260_lidar_cam_fusion/src/display_fps/src/: display_fps.cpp  display_fps.hpp  display_fps_node.cpp
Tutorials/kv260_lidar_cam_fusion/src/lidar_and_cam_detection/: CMakeLists.txt  README.md  package.xml
Tutorials/kv260_lidar_cam_fusion/src/lidar_and_cam_detection/launch/: lidar_and_cam_detection.launch
Tutorials/kv260_lidar_cam_fusion/src/lidar_and_cam_detection/rviz/: lidar_and_cam_detection.rviz
Tutorials/kv260_lidar_cam_fusion/src/lidar_and_cam_detection/src/: lidar_and_cam_detection_node.cpp
Tutorials/kv260_lidar_cam_fusion/src/lidar_detection/: CMakeLists.txt  README.md  package.xml
Tutorials/kv260_lidar_cam_fusion/src/lidar_detection/launch/: lidar_detection.launch
Tutorials/kv260_lidar_cam_fusion/src/lidar_detection/rviz/: lidar_detection.rviz
Tutorials/kv260_lidar_cam_fusion/src/lidar_detection/src/: lidar_detection.cpp  lidar_detection.hpp  lidar_detection_node.cpp
Tutorials/kv260_lidar_cam_fusion/src/show_lidar_cam/: CMakeLists.txt  README.md  package.xml
Tutorials/kv260_lidar_cam_fusion/src/show_lidar_cam/launch/: show_lidar_cam.launch
Tutorials/kv260_lidar_cam_fusion/src/show_lidar_cam/rviz/: show_lidar_cam.rviz
Tutorials/public-VitisAI-NPU-Custom-YOLOv5s-Deployment/: LICENSE.txt  README.md
Tutorials/public_VitisAI-NPU-Custom-ResNet18-Deployment/: README  README.md
Tutorials/pytorch-subgraphs/: README.md
files/: run_all_alexnet.sh  run_caffe_all.sh  set_the_CATSvsDOGS_prj.py
files/caffe/: caffe_flow_AlexNet.sh  set_prj_env_variables.sh
files/input/: empty.md
files/tutorials/: 1-Building-a-Vitis-Ultra96V2-and-MIPI-platform.md  3-Designing-with-Vitis-AI-for-a-custom-Edge-Platform.md
(+888 files in other folders)
