<?xml version="1.0"?>
<package format="2">
	<name>cam_detection</name>
	<version>0.0.0</version>
	<description>Object detection using camera on /dev/video0 using Rviz</description>
	<license>Apache-2.0</license>
	<maintainer email="bwiec@xilinx.com">Brian Wiec</maintainer>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>cv_bridge</depend>
</package>
